Fix controls alignment

--- a/src/css/night/_controls.sass
+++ b/src/css/night/_controls.sass
@@ -55,6 +55,7 @@
     li
       @include transition(background-color 0.2s ease-out)
       display: inline-block
+      vertical-align: top
       position: relative
       width: $controlsWidth
       height: $controlsHeight
